moved pagenumber row to same level as buttons

--- a/basic-concepts/calc.html
+++ b/basic-concepts/calc.html
@@ -19,13 +19,13 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h1 class="primary-title">Time Value of Money</h1>
-                    <h2 class="secondary-title">Part 1: Financial Calculators</h2>
+                    <!-- <h2 class="secondary-title">Part 1: Financial Calculators</h2> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -41,15 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-1 offset-sm-1">
-                    <!-- <div class="page-number">1</div> -->
-                </div>
-                <!-- <div class="offset-5 col-4 offset-md-6">
-                    <button type="button" class="hide btn"></button>
-                    <a type="button" class="btn" href="">button?</a></button>
-                </div> -->
-            </div>
+
         </div>
 
     </div> <!--  end of container -->
