--- a/tvm2/lecture2.html
+++ b/tvm2/lecture2.html
@@ -979,7 +979,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1012,7 +1012,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1070,7 +1070,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1111,7 +1111,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1154,7 +1154,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1201,7 +1201,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1253,7 +1253,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1290,7 +1290,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1333,7 +1333,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1377,7 +1377,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1424,7 +1424,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1459,7 +1459,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1503,7 +1503,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1541,7 +1541,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1596,7 +1596,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1639,7 +1639,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1686,7 +1686,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1738,7 +1738,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1788,7 +1788,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1825,7 +1825,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
