--- a/tvm3/lecture3.html
+++ b/tvm3/lecture3.html
@@ -1143,7 +1143,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1175,7 +1175,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1233,7 +1233,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1273,7 +1273,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1317,7 +1317,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1364,7 +1364,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1417,7 +1417,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1455,7 +1455,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1499,7 +1499,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1543,7 +1543,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1588,7 +1588,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1639,7 +1639,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1691,7 +1691,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1742,7 +1742,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
@@ -1793,7 +1793,7 @@
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: Cash Flows</h2>
-                        <h3 class="secondary-title">Exercises</h3>
+                        <!-- <h3 class="secondary-title">Exercises</h3> -->
                     </div>
                 </div>
                 <div class="row">
