--- a/basic-concepts/basics-1.html
+++ b/basic-concepts/basics-1.html
@@ -21,7 +21,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h1 class="primary-title">Time Value of Money</h1>
-                    <h2 class="secondary-title">Part 1: The Basics</h2>
+                    <!-- <h2 class="secondary-title">Part 1: The Basics</h2> -->
                 </div>
             </div>
         <nav class="row">
