--- a/basic-concepts/basics-2.html
+++ b/basic-concepts/basics-2.html
@@ -18,7 +18,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Introduction</h3>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
             </div>
         <nav class="row">
@@ -51,19 +51,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-1.html">Back</a>
-                    <a type="button" class="btn" href="basics-3.html">Continue</a>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-1">
                     <div class="page-number"></div>
                 </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                                        <a type="button" class="btn" href="basics-1.html">Back</a>
+                    <a type="button" class="btn" href="basics-3.html">Continue</a>
+                </div>
             </div>
         </div>
-
-
 
 
     </div> <!--  end of container -->
