--- a/basic-concepts/basics-help.html
+++ b/basic-concepts/basics-help.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -18,8 +18,8 @@
         <div id="" class="slide help-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Help Me!</h3>
+                    <h2 class="primary-title">TVM: The Basics Help</h2>
+                    <!-- <h3 class="secondary-title">Help Me!</h3> -->
                 </div>
             </div>
             <nav class="row">
@@ -40,7 +40,7 @@
                             </ul>
                             <p>Examples of Reciprocals:</p>
                             <div class="bottom-space">
-                                <img src="../../images/reciprocals.png" alt="examples of reciprocals" class="img-fluid">
+                                <img src="../images/reciprocals.png" alt="examples of reciprocals" class="img-fluid">
                             </div>
                             <hr>
                         </div>
@@ -60,10 +60,10 @@
                         <div id="dist">
                             <h4 class="contentTitle">Distributive Property</h4>
                             <p>We'll use the Distributive Property to distribute a number that is multiplied by a polynomial in parentheses. For instance:<br>
-                                <div class="bottom-space"><img src="../../images/distributive_property.png" alt="example of the distributive property" class="img-fluid"></div>
+                                <div class="bottom-space"><img src="../images/distributive_property.png" alt="example of the distributive property" class="img-fluid"></div>
                             </p>
                             <p>The Distributive Property is easy enough to understand when real numbers are involved. However, its important to understand how to distribute with variables.<br>
-                                <div class="bottom-space"><img src="../../images/distributive_property_with_variables.png" alt="example of the distributive property using variables" class="img-fluid"></div>
+                                <div class="bottom-space"><img src="../images/distributive_property_with_variables.png" alt="example of the distributive property using variables" class="img-fluid"></div>
                             </p>
                             <hr>
                         </div>
@@ -71,7 +71,7 @@
                             <h4 class="contentTitle">FOIL</h4>
                             <p>The <strong>FOIL</strong> Method is a systematic way to multiply terms inside parentheses. The letters stand for:
                                 <div class="question"><strong>F</strong>irst <strong>O</strong>uter <strong>I</strong>nner <strong>L</strong>ast</div>
-                                <div class="bottom-space"><img src="../../images/foil_explanation.png" alt="example of using FOIL method" class="img-fluid"></div>
+                                <div class="bottom-space"><img src="../images/foil_explanation.png" alt="example of using FOIL method" class="img-fluid"></div>
                             </p>
                         </div>
                         <hr>
@@ -92,25 +92,21 @@
                         <button type="button" class="btn">Continue</button>
                     </div>
                 </div> -->
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number"></div>
-                </div>
-            </div>
+
         </div>
 
     </div> <!--  end of container -->
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-<script src="basics-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
