--- a/basic-concepts/exercise14-26.html
+++ b/basic-concepts/exercise14-26.html
@@ -19,15 +19,15 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Exercises</h3>
+                    <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
-        <nav class="row">
-            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-        </nav>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
@@ -37,16 +37,15 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
+                </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <a href="" type="button" class="btn">Back</a>
                     <a href="" type="button" class="btn">Continue</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number"></div>
-                </div>
-            </div>
+
         </div>
 
     </div> <!--  end of container -->
