--- a/not-on-server/help/help1-1.html
+++ b/not-on-server/help/help1-1.html
@@ -76,6 +76,9 @@
                 </div>
             </div>
             <!-- <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
+                </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <button type="button" class="btn"></button>
                     <button type="button" class="btn"></button>
