basic concepts section done and embedded on page

--- a/basic-concepts/basics-6.html
+++ b/basic-concepts/basics-6.html
@@ -25,10 +25,10 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
@@ -44,12 +44,12 @@
                                     <input id="PV" type="number" placeholder="0"><br>
 
                                     <label style="margin-left: 58px;">Interest (i) </label>
-                                    <input id="i" type="number" step='1' placeholder="0"><br>
+                                    <input id="i" type="number" placeholder="0"><br>
 
                                     <label style="margin-left: 73px">Time (n) </label>
                                     <input id="n" type="number" placeholder="0"><br>
 
-                                    <button id="ex1" type="button" class="btn calculate-btn">Calculate</button>
+                                    <button id="exFV" type="button" class="btn calculate-btn">Calculate</button>
                                 </form>
                             </div>
                             <div class="answer" id="answer"></div>
