--- a/formulas/exercise12a-23.html
+++ b/formulas/exercise12a-23.html
@@ -15,8 +15,7 @@
 <body>
     <div class="container-fluid">
 
-
-        <!--  problem 12 answer -->
+        <!-- problem 14 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -25,22 +24,22 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 12: Solution</h4>
-                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <h4>Exercise 14: Solution</h4>
+                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                         <div class="math">
                             = ?<br>
-                            = 20000<br>
-                            = 7% &xrarr; 0.07<br>
-                            = 18
+                            = 10000<br>
+                            = 4% &xrarr; .04<br>
+                            = 10
                         </div>
                     </div>
                 </div>
@@ -56,7 +55,6 @@
             </div>
 
         </div>
-
 
 
     </div> <!--  end of container -->
