--- a/formulas/exercise14-26.html
+++ b/formulas/exercise14-26.html
@@ -15,8 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 9  -->
-        <div id="" class="slide exercise-slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -24,29 +23,16 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>n </label>
-                                    <input id="yrs-ex9" type="number"><br>
-                                </form>
-                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex9"></div>
-                        </div>
+                        <h3>Congratulations!</h3>
+                        <p>You’ve completed the TVM Basics Tutorial. If you were confident answering the exercise questions and got most of them right, then you have a good grasp of the basics of TVM. If you were not able to answer most of the exercise questions correctly, contact your instructor for additional help. Feel free to go through this tutorial as many times as needed to help you with the concepts.</p>
                     </div>
                 </div>
             </div>
@@ -61,7 +47,6 @@
             </div>
 
         </div>
-
 
     </div> <!--  end of container -->
 
