--- a/formulas/exercise7a-13.html
+++ b/formulas/exercise7a-13.html
@@ -15,8 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 3 answer -->
-        <div id="exercise1-slide5" class="slide exercise-slide">
+        <!--  problem 7 answer -->
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -24,35 +24,29 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 3: Solution</h4>
-                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
-
+                        <h4>Exercise 7: Solution</h4>
+                        <p>What interest rate is required for a deposit to double in 10 years?</p>
+                        <p>Remember to maintain the 2:1 ratio. It makes the math easy to start with Future Value (FV) = 2 and Present Value (PV) = 1.</p>
                         <p>Variables:</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = 2000<br>
-                            Future Value (FV) = ?<br>
-                            i = 0.08<br>
-                            n = 15</p>
-
+                        <p class="math">Present Value (PV) = 1<br>
+                            Future Value (FV) = 2<br>
+                            i = ?<br>
+                            n = 10
+                        </p>
                         <p>Plug the numbers into the equation:</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Future Value (FV) = Present Value (PV)(1 + i)<sup>n</sup> <br>
-
-                            Future Value (FV) = 2000(1 + 0.08)<sup>15</sup><br>
-
-                            Future Value (FV) = 2000(1.08)<sup>15</sup> <br>
-
-                            Future Value (FV) = 2000(3.172169)<br>
-                            <b>Future Value (FV) = $6,344.34</b></p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">
+                            <img src="./images/tvm1_question3.png" class="img-fluid " alt="">
+                        </p>
                     </div>
                 </div>
             </div>
