--- a/formulas/exercise9-16.html
+++ b/formulas/exercise9-16.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 13  -->
+        <!-- problem 9  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -24,29 +24,28 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 13: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
-
-                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
+                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
+                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label> </label>
-                                    <input id="Present Value (PV)alue-ex13" type="number"><br>
+                                    <label>n </label>
+                                    <input id="yrs-ex9" type="number"><br>
                                 </form>
-                                <button onclick="exercise_13()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex13"></div>
+                            <div class="answer" id="answer-ex9"></div>
                         </div>
                     </div>
                 </div>
