--- a/test.html
+++ b/test.html
@@ -19,9 +19,15 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TEST</h2>
-                    <h3 class="secondary-title">TEST</h3>
+                    <!-- <h3 class="secondary-title">TEST</h3> -->
                 </div>
             </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
