--- a/basic-concepts/basics-1.html
+++ b/basic-concepts/basics-1.html
@@ -24,12 +24,12 @@
                     <!-- <h2 class="secondary-title">Part 1: The Basics</h2> -->
                 </div>
             </div>
-        <nav class="row">
-            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-        </nav>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
                 <div class="col-sm-1 offset-sm-1">
                     <div class="page-number hide">1</div>
