--- a/basic-concepts/basics-2.html
+++ b/basic-concepts/basics-2.html
@@ -21,12 +21,12 @@
                     <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
             </div>
-        <nav class="row">
-            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-        </nav>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
@@ -55,7 +55,7 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                                        <a type="button" class="btn" href="basics-1.html">Back</a>
+                    <a type="button" class="btn" href="basics-1.html">Back</a>
                     <a type="button" class="btn" href="basics-3.html">Continue</a>
                 </div>
             </div>
