--- a/basic-concepts/basics-3.html
+++ b/basic-concepts/basics-3.html
@@ -23,12 +23,12 @@
                     <!-- <h3 class="secondary-title">Introduction - TVM Variables</h3> -->
                 </div>
             </div>
-        <nav class="row">
-            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-        </nav>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
