--- a/basic-concepts/basics-7.html
+++ b/basic-concepts/basics-7.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -23,47 +23,33 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-                        <h4>Exercise 3: Calculate the Unknown Variable</h4>
-                        <p>Now solve the TVM equation from the last screen and enter the value of the unknown variable.</p>
-                        <p>Hint: The information from the last question shows we are looking for the Future Value (Future Value (FV)).</p>
+                        <h4>Exercise 2: Calculate Future Value (FV)</h4>
                         <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex3" type="number"><br>
+                                    <label>Present Value (PV)</label>
+                                    <input id="PV" type="number" placeholder="0"><br>
+
+                                    <label style="margin-left: 58px;">Interest (i) </label>
+                                    <input id="i" type="number" placeholder="0"><br>
+
+                                    <label style="margin-left: 73px">Time (n) </label>
+                                    <input id="n" type="number" placeholder="0"><br>
+
                                 </form>
-                                <button onclick="exercise_3()" type="button" class="btn calculate-btn">Submit</button>
+                                <button id="exFV" type="button" class="btn calculate-btn">Calculate</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex3"></div>
-                        </div>
-                        <div class="">
-                            <form action="" class="indent">
-
-                                <label>Present Value (PV)</label>
-                                <input id="Present Value (PV)alue-ex2" type="number"><br>
-
-                                <label>Future Value (FV) </label>
-                                <input id="Future Value (FV)alue-ex2" type="number"><br>
-
-                                <label>Interest (i)</label>
-                                <input id="int-ex2" type="number"><br>
-
-                                <label>Time (n)</label>
-                                <input id="yrs-ex2" type="number"><br>
-
-                            </form>
-                            <button onclick="exercise_2()" type="button" class="btn calculate-btn">Submit</button>
+                            <div class="answer" id="answer"></div>
                         </div>
                     </div>
                 </div>
@@ -73,13 +59,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">30</div>
+                    <a href="basics-6.html" type="button" class="btn">Back</a>
+                    <a href="basics-1.html" type="button" style="width: 130px" class="btn">Return Home</a>
                 </div>
             </div>
         </div>
