--- a/formulas/exercise10-18.html
+++ b/formulas/exercise10-18.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 14  -->
+
+        <!--  problem 10  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -24,34 +25,34 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 14: Identify the Variables</h4>
+                        <h4>Exercise 12: Identify the Variables</h4>
                         <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and returns 4% annual interest?</p>
+                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
                                     <label> </label>
-                                    <input id="Present Value (PV)alue-ex14" type="number"><br>
+                                    <input id="Present Value (PV)alue-ex12" type="number"><br>
                                     <label> </label>
-                                    <input id="Future Value (FV)alue-ex14" type="number"><br>
+                                    <input id="Future Value (FV)alue-ex12" type="number"><br>
                                     <label>Interest (i)</label>
-                                    <input id="int-ex14" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex14" type="number"><br>
+                                    <input id="int-ex12" type="number"><br>
+                                    <label>&nbsp;&nbsp; </label>
+                                    <input id="yrs-ex12" type="number"><br>
                                 </form>
-                                <button onclick="exercise_14()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_12()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex14"></div>
+                            <div class="answer" id="answer-ex12"></div>
                         </div>
                     </div>
                 </div>
