--- a/formulas/exercise10a-19.html
+++ b/formulas/exercise10a-19.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!--   problem 6 answer -->
+
+        <!--  problem 12 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -24,25 +25,23 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 6: Solution</h4>
-                        <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
-                        The problem states that we want to double the investment, which means Future Value (FV) will be twice the amount of Present Value (PV). You can use any numbers, as long as you maintain as the Future Value (FV) to Present Value (PV) ratio, which is 2:1. However, to cut out the need to simplify the math later, it’s best to start with Future Value (FV) = 2 and Present Value (PV) = 1.
-                        <p>Variables:</p>
+                        <h4>Exercise 12: Solution</h4>
+                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = 1<br>
-                            Future Value (FV) = 2<br>
-                            i = ?<br>
-                            n = 10
-                        </p>
-
+                        <div class="math">
+                            = ?<br>
+                            = 20000<br>
+                            = 7% &xrarr; 0.07<br>
+                            = 18
+                        </div>
                     </div>
                 </div>
             </div>
@@ -57,6 +56,7 @@
             </div>
 
         </div>
+
 
 
     </div> <!--  end of container -->
