--- a/formulas/exercise12-22.html
+++ b/formulas/exercise12-22.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 8 answer -->
+        <!-- problem 14  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -24,24 +24,35 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 8: Solution</h4>
-                        <p>At a rate of 12% annual interest, how long would it take for an amount to double?</p>
-                        <p>LIke one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV)</span c> to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            Present Value (PV) = 1<br>
-                            Future Value (FV) = 2<br>
-                            i = 12% &xrarr; .12<br>
-                            n = ?
-                        </p>
+
+                        <h4>Exercise 14: Identify the Variables</h4>
+                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
+                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and returns 4% annual interest?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label> </label>
+                                    <input id="Present Value (PV)alue-ex14" type="number"><br>
+                                    <label> </label>
+                                    <input id="Future Value (FV)alue-ex14" type="number"><br>
+                                    <label>Interest (i)</label>
+                                    <input id="int-ex14" type="number"><br>
+                                    <label>Time (n)</label>
+                                    <input id="yrs-ex14" type="number"><br>
+                                </form>
+                                <button onclick="exercise_14()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex14"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -56,7 +67,6 @@
             </div>
 
         </div>
-
 
 
     </div> <!--  end of container -->
