--- a/formulas/exercise13-24.html
+++ b/formulas/exercise13-24.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <div id="" class="slide">
+        <!-- problem 15  -->
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -23,16 +24,31 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Congratulations!</h3>
-                        <p>You’ve completed the TVM Basics Tutorial. If you were confident answering the exercise questions and got most of them right, then you have a good grasp of the basics of TVM. If you were not able to answer most of the exercise questions correctly, contact your instructor for additional help. Feel free to go through this tutorial as many times as needed to help you with the concepts.</p>
+
+
+                        <h4>Exercise 15: Calculate the Unknown Variable</h4>
+                        <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
+
+                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label> </label>
+                                    <input id="Present Value (PV)alue-ex15" type="number"><br>
+                                </form>
+                                <button onclick="exercise_15()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex15"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -47,6 +63,7 @@
             </div>
 
         </div>
+
 
     </div> <!--  end of container -->
 
