--- a/formulas/exercise3a-5.html
+++ b/formulas/exercise3a-5.html
@@ -15,9 +15,8 @@
 <body>
     <div class="container-fluid">
 
-
-        <!-- problem 7  -->
-        <div id="" class="slide exercise-slide">
+        <!--  problem 3 answer -->
+        <div id="exercise1-slide5" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -25,29 +24,35 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
+                        <h4>Exercise 3: Solution</h4>
+                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
 
-                        <h4>Exercise 7: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
-                        <p class="question">What interest rate is required for a deposit to double in 10 years? <span class="note">Note: Include 3 digits to the right of the decimal.</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>i </label>
-                                    <input id="int-ex7" type="number" placeholder="0.000"><br>
-                                </form>
-                                <button onclick="exercise_7()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex7"></div>
-                        </div>
+                        <p>Variables:</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">Present Value (PV) = 2000<br>
+                            Future Value (FV) = ?<br>
+                            i = 0.08<br>
+                            n = 15</p>
+
+                        <p>Plug the numbers into the equation:</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">Future Value (FV) = Present Value (PV)(1 + i)<sup>n</sup> <br>
+
+                            Future Value (FV) = 2000(1 + 0.08)<sup>15</sup><br>
+
+                            Future Value (FV) = 2000(1.08)<sup>15</sup> <br>
+
+                            Future Value (FV) = 2000(3.172169)<br>
+                            <b>Future Value (FV) = $6,344.34</b></p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                     </div>
                 </div>
             </div>
