--- a/formulas/exercise6-10.html
+++ b/formulas/exercise6-10.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
 
 
-        <!--  problem 10  -->
+        <!-- problem 6  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -25,34 +25,34 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 12: Identify the Variables</h4>
-                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <h4>Exercise 6: Identify the Variables</h4>
+                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label> </label>
-                                    <input id="Present Value (PV)alue-ex12" type="number"><br>
-                                    <label> </label>
-                                    <input id="Future Value (FV)alue-ex12" type="number"><br>
+                                    <label>Present Value (PV) </label>
+                                    <input id="Present Value (PV)alue-ex6" type="number"><br>
+                                    <label>Future Value (FV) </label>
+                                    <input id="Future Value (FV)alue-ex6" type="number"><br>
                                     <label>Interest (i)</label>
-                                    <input id="int-ex12" type="number"><br>
-                                    <label>&nbsp;&nbsp; </label>
-                                    <input id="yrs-ex12" type="number"><br>
+                                    <input id="int-ex6" type="number"><br>
+                                    <label>Time (n)</label>
+                                    <input id="yrs-ex6" type="number"><br>
                                 </form>
-                                <button onclick="exercise_12()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_6()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex12"></div>
+                            <div class="answer" id="answer-ex6"></div>
                         </div>
                     </div>
                 </div>
