--- a/formulas/exercise8-14.html
+++ b/formulas/exercise8-14.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 14 answer -->
+        <!-- problem 8  -->
+
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -24,22 +25,34 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 14: Solution</h4>
-                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <div class="math">
-                            = ?<br>
-                            = 10000<br>
-                            = 4% &xrarr; .04<br>
-                            = 10
+
+                        <h4>Exercise 8: Identify the Variables</h4>
+                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label>Present Value (PV) </label>
+                                    <input id="Present Value (PV)alue-ex8" type="number"><br>
+                                    <label>Future Value (FV) </label>
+                                    <input id="Future Value (FV)alue-ex8" type="number"><br>
+                                    <label>Interest (i)</label>
+                                    <input id="int-ex8" type="number"><br>
+                                    <label>Time (n)</label>
+                                    <input id="yrs-ex8" type="number"><br>
+                                </form>
+                                <button onclick="exercise_8()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex8"></div>
                         </div>
                     </div>
                 </div>
