--- a/formulas/exercise8a-15.html
+++ b/formulas/exercise8a-15.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 7 answer -->
+        <!--  problem 8 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -24,28 +24,23 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 7: Solution</h4>
-                        <p>What interest rate is required for a deposit to double in 10 years?</p>
-                        <p>Remember to maintain the 2:1 ratio. It makes the math easy to start with Future Value (FV) = 2 and Present Value (PV) = 1.</p>
-                        <p>Variables:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = 1<br>
-                            Future Value (FV) = 2<br>
-                            i = ?<br>
-                            n = 10
-                        </p>
-                        <p>Plug the numbers into the equation:</p>
+                        <h4>Exercise 8: Solution</h4>
+                        <p>At a rate of 12% annual interest, how long would it take for an amount to double?</p>
+                        <p>LIke one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV)</span c> to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                         <p class="math">
-                            <img src="./images/tvm1_question3.png" class="img-fluid " alt="">
+                            Present Value (PV) = 1<br>
+                            Future Value (FV) = 2<br>
+                            i = 12% &xrarr; .12<br>
+                            n = ?
                         </p>
                     </div>
                 </div>
@@ -61,6 +56,7 @@
             </div>
 
         </div>
+
 
 
     </div> <!--  end of container -->
