--- a/not-on-server/originals/help-fv.html
+++ b/not-on-server/originals/help-fv.html
@@ -23,10 +23,10 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="/basic-concepts/basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="/basic-concepts/basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help-index.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
