--- a/not-on-server/originals/help1-2.html
+++ b/not-on-server/originals/help1-2.html
@@ -26,10 +26,10 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="../basics-exercises.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="../basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="../basics-exercises.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
